Change red color value

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -10,7 +10,7 @@ $color-light: #f6f9fd;
 $color-superlight: #fff;
 $color-blue: #3b72e2;
 $color-white: #fff;
-$color-red: #e8523f;
+$color-red: tomato;
 $color-green: #1f998e;
 $color-dark: #383d4a;
 
